src/app/files/LdrModelGrammar.ts
/* eslint-disable */ import { Vector3, Matrix4 } from 'three';

// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.3.1 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { MultiModels: peg$parseMultiModels };
  let peg$startRuleFunction: () => any = peg$parseMultiModels;

  const peg$c0 = function(models: any): any {
      	return models;
      };
  const peg$c1 = "0";
  const peg$c2 = peg$literalExpectation("0", false);
  const peg$c3 = "FILE";
  const peg$c4 = peg$literalExpectation("FILE", false);
  const peg$c5 = "NOFILE";
  const peg$c6 = peg$literalExpectation("NOFILE", false);
  const peg$c7 = function(f: any, m: any): any {
      	return { ...{ file: f}, ... m };
      };
  const peg$c8 = function(m: any): any {
    	return [ m ];
    };
  const peg$c9 = function(commands: any): any {
    	return { commands };
    };
  const peg$c10 = function(c: any): any {
    	return c
    };
  const peg$c11 = "\n";
  const peg$c12 = peg$literalExpectation("\n", false);
  const peg$c13 = "\r";
  const peg$c14 = peg$literalExpectation("\r", false);
  const peg$c15 = " ";
  const peg$c16 = peg$literalExpectation(" ", false);
  const peg$c17 = "\t";
  const peg$c18 = peg$literalExpectation("\t", false);
  const peg$c19 = /^[ \t]/;
  const peg$c20 = peg$classExpectation([" ", "\t"], false, false);
  const peg$c21 = function(c: any): any {
    	return c;
    };
  const peg$c22 = function(c: any): any {
      	return c;
      };
  const peg$c23 = function(): any {
  		return { ...{ lineType: 0} };
      };
  const peg$c24 = function(x: any): any {
  		return { ...{ lineType: 0}, ... x };
      };
  const peg$c25 = "1";
  const peg$c26 = peg$literalExpectation("1", false);
  const peg$c27 = function(x: any): any {
  	    return x;
     };
  const peg$c28 = "2";
  const peg$c29 = peg$literalExpectation("2", false);
  const peg$c30 = "3";
  const peg$c31 = peg$literalExpectation("3", false);
  const peg$c32 = "4";
  const peg$c33 = peg$literalExpectation("4", false);
  const peg$c34 = function(x: any): any {
      	return x;
      };
  const peg$c35 = "5";
  const peg$c36 = peg$literalExpectation("5", false);
  const peg$c37 = function(n: any): any {
    	return n;
    };
  const peg$c38 = "//";
  const peg$c39 = peg$literalExpectation("//", false);
  const peg$c40 = peg$anyExpectation();
  const peg$c41 = "";
  const peg$c42 = function(): any {
      	return "";
      };
  const peg$c43 = "Name:";
  const peg$c44 = peg$literalExpectation("Name:", false);
  const peg$c45 = function(c: any): any {
    	return {
      	subType: "META",
      	metaName: "NAME",
          name: c
      };
    };
  const peg$c46 = "Author:";
  const peg$c47 = peg$literalExpectation("Author:", false);
  const peg$c48 = function(c: any): any {
    	return {
      	subType: "META",
      	metaName: "AUTHOR",
      	author: c
      };
    };
  const peg$c49 = "--";
  const peg$c50 = peg$literalExpectation("--", false);
  const peg$c51 = function(c: any): any {
    	return {
  			subType: "COMMENT",
  				hasSlashes: true,
          comment: c
      };
    };
  const peg$c52 = function(c: any): any {
    	return {
      	subType: "COMMENT",
  				hasSlashes: false,
          comment: c
      };
    };
  const peg$c53 = /^[^\r]/;
  const peg$c54 = peg$classExpectation(["\r"], true, false);
  const peg$c55 = /^[^\n]/;
  const peg$c56 = peg$classExpectation(["\n"], true, false);
  const peg$c57 = function(): any {
  		return text();
    };
  const peg$c58 = "!";
  const peg$c59 = peg$literalExpectation("!", false);
  const peg$c60 = function(n: any, c: any): any {
    	return {
      	subType: "META",
          metaName: "!",
          value: n + c
      }
    };
  const peg$c61 = /^[A-Z_]/;
  const peg$c62 = peg$classExpectation([["A", "Z"], "_"], false, false);
  const peg$c63 = function(): any {
    	return text();
    };
  const peg$c64 = "BFC";
  const peg$c65 = peg$literalExpectation("BFC", false);
  const peg$c66 = function(cert: any): any {
    	return {
      	subType: "META",
      	metaName: "BFC",
      	bfc: cert
      }
    };
  const peg$c67 = "CW";
  const peg$c68 = peg$literalExpectation("CW", false);
  const peg$c69 = "CLIP";
  const peg$c70 = peg$literalExpectation("CLIP", false);
  const peg$c71 = function(): any {
      	return {
          	subType: "CLIP",
          	clip: true,
            implied: false,
            dir: "CW"
          };
      };
  const peg$c72 = "CCW";
  const peg$c73 = peg$literalExpectation("CCW", false);
  const peg$c74 = "INVERTNEXT";
  const peg$c75 = peg$literalExpectation("INVERTNEXT", false);
  const peg$c76 = function(): any {
      	return {
          	subType: "INVERTNEXT",
          	invertNext: true
          }
  	};
  const peg$c77 = "NOCLIP";
  const peg$c78 = peg$literalExpectation("NOCLIP", false);
  const peg$c79 = function(): any {
      	return {
          	subType: "CLIP",
              clip: false
          };
  	};
  const peg$c80 = function(dir: any): any {
     	return {
      		subType: "CLIP",
      		clip: true,
          implied: false,
          dir: dir
        };
     };
  const peg$c81 = function(): any {
      	return {
          	subType: "CLIP",
          	clip: true,
            implied: true,
            dir: "CCW"
        }
      };
  const peg$c82 = "CERTIFY";
  const peg$c83 = peg$literalExpectation("CERTIFY", false);
  const peg$c84 = function(c: any): any {
        return c;
     };
  const peg$c85 = function(): any {
      	return {
          	subType: "CERTIFY",
          	certfied: true,
            implied: true,
            dir: "CCW"
          };
      };
  const peg$c86 = function(dir: any): any {
     	return {
      		subType: "CERTIFY",
      		certified: true,
          implied: false,
          dir: dir
        };
     };
  const peg$c87 = "NOCERTIFY";
  const peg$c88 = peg$literalExpectation("NOCERTIFY", false);
  const peg$c89 = function(): any {
      	return {
          	subType: "CERTIFY",
      			certified: false
          };
      };
  const peg$c90 = "STEP";
  const peg$c91 = peg$literalExpectation("STEP", false);
  const peg$c92 = function(): any {
      	return {
          	subType: "META",
      			metaName: "STEP"
          };
      };
  const peg$c93 = "CLEAR";
  const peg$c94 = peg$literalExpectation("CLEAR", false);
  const peg$c95 = function(): any {
      	return {
          	subType: "META",
      			metaName: "CLEAR"
          };
      };
  const peg$c96 = "PAUSE";
  const peg$c97 = peg$literalExpectation("PAUSE", false);
  const peg$c98 = function(): any {
      	return {
          	subType: "META",
      			metaName: "PAUSE"
          };
      };
  const peg$c99 = "SAVE";
  const peg$c100 = peg$literalExpectation("SAVE", false);
  const peg$c101 = function(): any {
      	return {
          	subType: "META",
      			metaName: "SAVE"
          };
      };
  const peg$c102 = "PRINT";
  const peg$c103 = peg$literalExpectation("PRINT", false);
  const peg$c104 = function(c: any): any {
  		return {
  				subType: "META",
  				metaName: "PRINT",
  				print: c
  			};
  	};
  const peg$c105 = "WRITE";
  const peg$c106 = peg$literalExpectation("WRITE", false);
  const peg$c107 = function(c: any): any {
  		return {
  				subType: "META",
  				metaName: "WRITE",
  				write: c
  			};
  	};
  const peg$c108 = function(color: any, matrix: any, file: any): any {
      	return {
          	lineType: 1,
              color: color,
              matrix: matrix,
              file: file
          }
      };
  const peg$c109 = function(color: any, a: any, b: any): any {
      	return {
          	lineType: 2,
              color: color,
              firstPoint: a,
              secondPoint: b
          }
      };
  const peg$c110 = function(color: any, a: any, b: any, c: any): any {
      	return {
          	lineType: 3,
              color: color,
              firstPoint: a,
              secondPoint: b,
              thirdPoint: c
          }
      };
  const peg$c111 = function(color: any, a: any, b: any, c: any, d: any): any {
      	return {
          	lineType: 4,
              color: color,
              firstPoint: a,
              secondPoint: b,
              thirdPoint: c,
              forthPoint: d
          }
      };
  const peg$c112 = function(color: any, a: any, b: any, c: any, d: any): any {
      	return {
          	lineType: 5,
              color: color,
              firstPoint: a,
              secondPoint: b,
              firstControlPoint: c,
              secondControlPoint: d
          }
      };
  const peg$c113 = function(x: any, y: any, z: any, a: any, b: any, c: any, d: any, e: any, f: any, g: any, h: any, i: any): any {
      	return new Matrix4().set(a, b, c, x, d, e, f, y, g, h, i, z, 0, 0, 0, 1);
  //    	return [ a, b, c, x, d, e, f, y, g, h, i, z, 0, 0, 0, 1 ]
  	};
  const peg$c114 = function(a: any, b: any, c: any): any {
      	return new Vector3(a, b, c);
  //    	return [ a, b, c ]
      };
  const peg$c115 = function(x: any): any {
      	return x
      };
  const peg$c116 = /^[0-9]/;
  const peg$c117 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c118 = function(): any {
  		return { num: parseInt(text(), 10) }
  	};
  const peg$c119 = "0x2";
  const peg$c120 = peg$literalExpectation("0x2", false);
  const peg$c121 = function(): any {
      	return { direct: parseInt(text(), 16) }
  };
  const peg$c122 = /^[0-9A-F]/;
  const peg$c123 = peg$classExpectation([["0", "9"], ["A", "F"]], false, false);
  const peg$c124 = function(): any {
  		return parseFloat(text());
  	};
  const peg$c125 = ".";
  const peg$c126 = peg$literalExpectation(".", false);
  const peg$c127 = /^[1-9]/;
  const peg$c128 = peg$classExpectation([["1", "9"]], false, false);
  const peg$c129 = /^[eE]/;
  const peg$c130 = peg$classExpectation(["e", "E"], false, false);
  const peg$c131 = "-";
  const peg$c132 = peg$literalExpectation("-", false);
  const peg$c133 = "+";
  const peg$c134 = peg$literalExpectation("+", false);
  const peg$c135 = /^[ 0-9a-zA-Z_.\\\-]/;
  const peg$c136 = peg$classExpectation([" ", ["0", "9"], ["a", "z"], ["A", "Z"], "_", ".", "\\", "-"], false, false);
  const peg$c137 = function(): any {
      	return text().trim();
      };
  const peg$c138 = /^[\r\n]/;
  const peg$c139 = peg$classExpectation(["\r", "\n"], false, false);
  const peg$c140 = /^[\n]/;
  const peg$c141 = peg$classExpectation(["\n"], false, false);
  const peg$c142 = peg$otherExpectation("whitespace");

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseMultiModels(): any {
    let s0, s1, s2;

    s0 = peg$parseSingleModel();
    if (s0 as any === peg$FAILED) {
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseMultiModel();
      while (s2 as any !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseMultiModel();
      }
      if (s1 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseMultiModel(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 48) {
      s1 = peg$c1;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c3) {
          s3 = peg$c3;
          peg$currPos += 4;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseFile();
            if (s5 as any !== peg$FAILED) {
              s6 = peg$parseEOL();
              if (s6 as any !== peg$FAILED) {
                s7 = peg$parseModel();
                if (s7 as any !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 48) {
                    s8 = peg$c1;
                    peg$currPos++;
                  } else {
                    s8 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c2); }
                  }
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parse_();
                    if (s9 as any !== peg$FAILED) {
                      if (input.substr(peg$currPos, 6) === peg$c5) {
                        s10 = peg$c5;
                        peg$currPos += 6;
                      } else {
                        s10 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                      }
                      if (s10 as any !== peg$FAILED) {
                        s11 = peg$parseEOL();
                        if (s11 as any !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c7(s5, s7);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSingleModel(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    peg$silentFails++;
    s2 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 48) {
      s3 = peg$c1;
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s3 as any !== peg$FAILED) {
      s4 = peg$parse_();
      if (s4 as any !== peg$FAILED) {
        if (input.substr(peg$currPos, 4) === peg$c3) {
          s5 = peg$c3;
          peg$currPos += 4;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s5 as any !== peg$FAILED) {
          s3 = [s3, s4, s5];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    peg$silentFails--;
    if (s2 as any === peg$FAILED) {
      s1 = undefined;
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$parseModel();
      if (s2 as any !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseModel(): any {
    let s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseCommand();
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseCommand();
    }
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c9(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseTitle(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseCommentText();
    if (s1 as any !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c10(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNewLine(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 10) {
      s0 = peg$c11;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c12); }
    }

    return s0;
  }

  function peg$parseCarrageReturn(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 13) {
      s0 = peg$c13;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }

    return s0;
  }

  function peg$parseWhitespace(): any {
    let s0;

    s0 = peg$parseSpace();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseTab();
    }

    return s0;
  }

  function peg$parseSpace(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 32) {
      s0 = peg$c15;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    return s0;
  }

  function peg$parseTab(): any {
    let s0;

    if (input.charCodeAt(peg$currPos) === 9) {
      s0 = peg$c17;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parseCommand(): any {
    let s0, s1, s2, s3, s4, s5;
